--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
     }
 
     .btn:hover {
-      transform: scale(1.2);
+      transform: scale(1.1);
       background-color: #005f99;
     }
 
@@ -189,7 +189,7 @@
     <img src="{{ url_for('static', filename='SuProje-Resim1.avif') }}" alt="Sol süsleme resmi" class="side-image">
 
     <div class="content">
-      <p class="paragraph">Su, yaşamın devamı için en temel ihtiyaçlardan biridir...</p>
+      <p class="paragraph">Burada bizim yaptığımız diğer eserleri görebilirsiniz!</p>
 
       <div class="button-row">
         <form action="/siir" method="post">
@@ -206,7 +206,7 @@
 
   <div class="content-second">
     <p class="paragraph">
-      Su kaynaklarının korunması için bireysel ve toplumsal farkındalığın artırılması gerekmektedir...
+      Burada ise anketimiz bulunmaktadır. Ankette proje ile nasıl hissetiğinizi ve düşüncelerinizi bizim görmemiz için atabilirsiniz. Bunu yapınca bizim websiteyi geliştirmemize neden olur. Herneyse hemen haberlere dönelim! 
     </p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" class="btn">Ankete Giriniz?</a>
   </div>
