--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,20 @@
       flex-shrink: 0;
     }
 
+    
     .content {
+      background-color: white;
+      border: 5px solid #00a0ff;
+      border-radius: 40px;
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 25px 40px;
+      box-shadow: 0 0 100px rgba(0, 0, 0, 0.25);
+      line-height: 1.6;
+      position: relative;
+    }
+
+    .content-second {
       background-color: white;
       border: 5px solid #00a0ff;
       border-radius: 40px;
