--- a/templates/index.html
+++ b/templates/index.html
@@ -179,6 +179,12 @@
       }
     }
 
+    h1 {
+      color: #007acc;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
     @media (max-width: 480px) {
       .hero-background {
         padding: 30px 15px;
@@ -219,9 +225,26 @@
 
   <div class="content-second">
     <p class="paragraph">
-      Burada ise anketimiz bulunmaktadır. Ankette proje ile nasıl hissetiğinizi ve düşüncelerinizi bizim görmemiz için atabilirsiniz. Bunu yapınca bizim websiteyi geliştirmemize neden olur. Herneyse hemen haberlere dönelim! 
+      Burada ise anketimiz bulunmaktadır.
+      Ankette proje ile nasıl hissetiğinizi ve düşüncelerinizi bizim görmemiz için atabilirsiniz.
+      Bunu yapınca bizim websiteyi geliştirmemize neden olur.
+      Ve Kaynakçaya da bakabilirsiniz bizim hangi website ve bilgileri kullandığımız için
+      Herneyse hemen haberlere dönelim! 
     </p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" class="btn">Ankete Giriniz?</a>
+  </div>
+
+  <div class="content-second">
+    <h1>
+       Türkiye’de Kuraklık Tehdidi: Su Kaynakları Az Kalıyor.
+    </h1>
+    <br>
+    <p class="paragraph">
+      Türkiye’de yağış rejimlerindeki değişim, artan sıcaklıklar ve su kaynaklarının azalması ciddi bir kuraklık riskini beraberinde getiriyor.
+      Küresel iklim değişikliği, Türkiye’nin yarı kurak iklim yapısını daha da kırılgan hale getirirken, artan su talebi ve yanlış su yönetimi sorunu derinleştiriyor.
+      Yağış miktarlarının azalması, yeraltı su seviyelerinin düşmesine ve su kıtlığı tehdidinin artmasına neden oluyor.
+      Kuraklık riski yalnız içme sularını değil, hidro enerji üretimi ile tarım ve hayvancılıkta kullanılan su stoğunu da tehlikeye atıyor.
+    </p>
   </div>
 
   <audio id="bg-music" loop>
