--- a/templates/index.html
+++ b/templates/index.html
@@ -232,6 +232,9 @@
       Herneyse hemen haberlere dönelim! 
     </p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" class="btn">Ankete Giriniz?</a>
+      <form action="/hikaye" method="post">
+        <button class="btn" type="submit">Kullanılan Kaynaklar</button>
+      </form>
   </div>
 
   <div class="content-second">
