--- a/templates/index.html
+++ b/templates/index.html
@@ -234,7 +234,7 @@
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" class="btn">Ankete Giriniz?</a>
     <br>
     <br>
-      <form action="/hikaye" method="post">
+      <form action="/kaynakca" method="post">
         <button class="btn" type="submit">Kullanılan Kaynaklar</button>
       </form>
   </div>
