--- a/templates/page4.html
+++ b/templates/page4.html
@@ -62,6 +62,28 @@
       background-color: #005f99;
     }
 
+    .btn2 {
+      display: inline-block;
+      background-color: #F54927;
+      color: white;
+      padding: 12px 25px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      box-shadow: 0 4px 8px rgba(0, 122, 204, 0.4);
+      cursor: pointer;
+      user-select: none;
+      
+      transition: transform 0.4s ease, background-color 0.3s ease;
+      transform: scale(1);
+    }
+
+    .btn:hover {
+      transform: scale(1.2);
+      background-color: #FF2B00;
+    }
+
     @media (max-width: 768px) {
       .content {
         padding: 20px 15px;
@@ -84,7 +106,7 @@
         <button class="btn"type="submit">Geri Dön?</button>
     </form>
     <br>
-    <a href="https://www.dogrulukpayi.com/bulten/turkiye-de-kuraklik-tehdidi-su-kaynaklari-alarm-veriyor?gad_source=1&gad_campaignid=1455793348&gclid=Cj0KCQiAiKzIBhCOARIsAKpKLANj_T78xB3kI-b5EYrPzj286Q3p3hZdXeyjxA_GCq0oNRiPv2UL_9saAj4xEALw_wcB" class="btn">Kullanılan Haber1</a>
+    <a href="https://www.dogrulukpayi.com/bulten/turkiye-de-kuraklik-tehdidi-su-kaynaklari-alarm-veriyor?gad_source=1&gad_campaignid=1455793348&gclid=Cj0KCQiAiKzIBhCOARIsAKpKLANj_T78xB3kI-b5EYrPzj286Q3p3hZdXeyjxA_GCq0oNRiPv2UL_9saAj4xEALw_wcB" class="btn2">Kullanılan Haber1</a>
   </div>
 
 </body>
