--- a/templates/page4.html
+++ b/templates/page4.html
@@ -79,7 +79,7 @@
       transform: scale(1);
     }
 
-    .btn:hover {
+    .btn2:hover {
       transform: scale(1.2);
       background-color: #FF2B00;
     }
