--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,16 @@
       to { left: 0%; }
     }
 
+    
+    @keyframes contentanim2 {
+    0% { top: 200%; }
+    25% { top: 0%; }
+    50% { bottom: 50%; }
+    60% { bottom: 35%; }
+    75% { bottom: 0%; }
+    100% { bottom: 0%; top: 0%;}
+    }
+
     .content-second {
       background-color: white;
       border: 5px solid #00a0ff;
@@ -95,7 +105,7 @@
       box-shadow: 0 0 100px rgba(0, 0, 0, 0.25);
       line-height: 1.6;
       position: relative;
-      animation: contentanim1 2s forwards;
+      animation: contentanim2 2s forwards;
       flex: 1;
     }
 
