--- a/templates/index.html
+++ b/templates/index.html
@@ -76,13 +76,26 @@
 
     
     @keyframes contentanim2 {
-    0% { top: 200%; }
-    25% { top: 0%; }
-    50% { bottom: 50%; }
-    60% { bottom: 35%; }
-    75% { bottom: 0%; }
-    100% { bottom: 0%; top: 0%;}
+      0% {
+        transform: translateY(-200%);
+      }
+      25% {
+        transform: translateY(0%);
+      }
+      50% {
+        transform: translateY(50%);
+      }
+      60% {
+        transform: translateY(35%);
+      }
+      75% {
+        transform: translateY(0%);
+      }
+      100% {
+        transform: translateY(0%);
+      }
     }
+
 
     .content-second {
       background-color: white;
@@ -105,7 +118,7 @@
       box-shadow: 0 0 100px rgba(0, 0, 0, 0.25);
       line-height: 1.6;
       position: relative;
-      animation: contentanim2 2s forwards;
+      animation: contentanim2 2s ease-in-out forwards;
       flex: 1;
     }
 
