--- a/templates/index.html
+++ b/templates/index.html
@@ -118,9 +118,14 @@
       box-shadow: 0 0 100px rgba(0, 0, 0, 0.25);
       line-height: 1.6;
       position: relative;
-      animation: contentanim2 1.5s ease-out forwards;
+      animation: contentanim2 0.5s ease-out forwards;
       flex: 1;
     }
+
+      content:nth-of-type(1) {
+        animation-delay: 1.25s;
+      }
+
 
     .paragraph {
       font-size: 1.1em;
