--- a/templates/index.html
+++ b/templates/index.html
@@ -122,9 +122,9 @@
       flex: 1;
     }
 
-      content:nth-of-type(1) {
-        animation-delay: 1.25s;
-      }
+    .content:nth-of-type(1) {
+      animation-delay: 1s;
+    }
 
 
     .paragraph {
