--- a/templates/page4.html
+++ b/templates/page4.html
@@ -41,6 +41,7 @@
       margin-bottom: 20px;
     }
     .btn {
+      display: inline-block;
       background-color: #007acc;
       color: white;
       padding: 12px 25px;
@@ -66,7 +67,6 @@
       background-color: #F54927;
       color: white;
       padding: 12px 25px;
-      border-radius: 25px;
       text-decoration: none;
       font-weight: 600;
       font-size: 1rem;
