--- a/templates/page4.html
+++ b/templates/page4.html
@@ -105,7 +105,7 @@
         <button class="btn"type="submit">Geri Dön?</button>
     </form>
     <br>
-    <a href="https://www.dogrulukpayi.com/bulten/turkiye-de-kuraklik-tehdidi-su-kaynaklari-alarm-veriyor?gad_source=1&gad_campaignid=1455793348&gclid=Cj0KCQiAiKzIBhCOARIsAKpKLANj_T78xB3kI-b5EYrPzj286Q3p3hZdXeyjxA_GCq0oNRiPv2UL_9saAj4xEALw_wcB" class="btn2">Kullanılan Haber1</a>
+    <a href="https://www.dogrulukpayi.com/bulten/turkiye-de-kuraklik-tehdidi-su-kaynaklari-alarm-veriyor?gad_source=1&gad_campaignid=1455793348&gclid=Cj0KCQiAiKzIBhCOARIsAKpKLANj_T78xB3kI-b5EYrPzj286Q3p3hZdXeyjxA_GCq0oNRiPv2UL_9saAj4xEALw_wcB" class="btn2">Kullanılan Kaynak (Haber 1)</a>
   </div>
 
 </body>
