--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,10 @@
       color: #333;
     }
 
+    .main-img {
+      
+    }
+
     .hero-background {
       background-image: url('{{ url_for("static", filename="SuProje-Resim1.avif") }}');
       background-repeat: repeat-x;
@@ -298,5 +302,44 @@
     </p>
     <br>
   </div>
+    
+   <div class="content-second">
+    <h1>
+       Türkiye’de Kuraklık Tehdidi: Su Kaynakları Az Kalıyor.
+    </h1>
+    <br>
+    <p class="paragraph">
+      Türkiye’de yağış rejimlerindeki değişim, artan sıcaklıklar ve su kaynaklarının azalması ciddi bir kuraklık riskini beraberinde getiriyor.
+      Küresel iklim değişikliği, Türkiye’nin yarı kurak iklim yapısını daha da kırılgan hale getirirken, artan su talebi ve yanlış su yönetimi sorunu derinleştiriyor.
+      Yağış miktarlarının azalması, yeraltı su seviyelerinin düşmesine ve su kıtlığı tehdidinin artmasına neden oluyor.
+      Kuraklık riski yalnız içme sularını değil, hidro enerji üretimi ile tarım ve hayvancılıkta kullanılan su stoğunu da tehlikeye atıyor.
+    </p>
+    <br>
+    <h1>
+      Azalan Yağışlar ve Su Kaynaklarının Durumu
+    </h1>
+    <br>
+    <p class="paragraph">
+      Meteoroloji Genel Müdürlüğü’nün (MGM) Şubat 2025’te yayımladığı alansal yağış raporuna göre, son yıllarda yağışlarda önemli bir düşüş yaşandı. 
+      Yağışlarda Türkiye genelinde normale göre %33;
+      İç Anadolunun batısı, Güneydoğu Anadolu ve Ege bölgelerinde ise %60’tan fazla azalma gözlemlendi. 
+    </p>
+    <br>
+    <p class="paragraph">
+      Azalan yağışlar baraj stoklarını da olumsuz etkiliyor. Greenpeace’in raporuna göre, Türkiye’de 2023 sonu itibarıyla baraj doluluk oranları kritik seviyelere inmiş durumda. 
+      İstanbul, Ankara ve İzmir gibi büyük şehirlerde su rezervleri önceki yıllara göre önemli ölçüde azalırken Türkiye’nin yıllık kişi başına düşen su miktarı ise 1.300 metreküp seviyesine geriledi.
+      Çeşitli endeks verileri; kişi başına 1.700 metreküp su sıkıntısının olmadığını, 1.000-1.700 metreküp su stresini, 500-1.000 metreküp su kıtlığını ve 500 metreküp altının mutlak su kıtlığı olduğunu gösteriyor. 
+      Dolayısıyla Türkiye su stresi içindeki ülkeler arasında yer alıyor.
+    </p>
+    <br>
+    <p class="paragraph">
+      Tarım ve Orman Bakanlığı’nın Kuraklık Yönetimi Raporu’na göre;
+      nüfus artışı ve su tüketimindeki plansız büyüme devam ederse, Türkiye 2030 yılı itibariyle kişi başına düşen su miktarının 1.000 metreküpün altına inerek 2070 yılına kadar su kıtlığı seviyesine gerilemesi muhtemel. 
+      Uzmanlar su yönetiminde acil önlemler alınmazsa, Türkiye’nin gelecekte daha ciddi su krizleriyle karşılaşabileceği konusunda uyarıyor.
+    </p>
+    <br>
+  </div>
+
+  
 </body>
 </html>
