--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,8 @@
       padding: 25px 40px;
       box-shadow: 0 0 100px rgba(0, 0, 0, 0.25);
       margin: 40px auto;
-      max-width: 500px;
+      width: 800px;
+      height: 500px
       text-align: center;
       position: relative;
       animation: contentanim1 4s ease-out forwards;
@@ -58,7 +59,7 @@
 
     .main-img img {
       width: 100%;
-      height: auto;
+      height: 100%;
       border-radius: 30px;
       border: 3px solid #00a0ff;
       box-shadow: 0 0 20px rgba(0,0,0,0.2);
