--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
       box-shadow: 0 0 100px rgba(0, 0, 0, 0.25);
       margin: 40px auto;
       width: 800px;
-      height: 500px
+      height: 500px;
       text-align: center;
       position: relative;
       animation: contentanim1 4s ease-out forwards;
