--- a/templates/index.html
+++ b/templates/index.html
@@ -265,7 +265,7 @@ textarea {
 <body>
 
   <div class="hero-background">
-    <div class="overlay">Merhaba!</div>
+    <div class="overlay">Su Hayattır...</div>
   </div>
 
   <main class="main-layout">
@@ -347,37 +347,49 @@ textarea {
     
    <div class="content-second">
     <h1>
-       Türkiye’de Kuraklık Tehdidi: Su Kaynakları Az Kalıyor.
+       İklim değişikliği gölgesinde su krizi: Türkiye'de kuraklık riski nasıl önlenebilir?
     </h1>
     <br>
     <p class="paragraph">
-      Türkiye’de yağış rejimlerindeki değişim, artan sıcaklıklar ve su kaynaklarının azalması ciddi bir kuraklık riskini beraberinde getiriyor.
-      Küresel iklim değişikliği, Türkiye’nin yarı kurak iklim yapısını daha da kırılgan hale getirirken, artan su talebi ve yanlış su yönetimi sorunu derinleştiriyor.
-      Yağış miktarlarının azalması, yeraltı su seviyelerinin düşmesine ve su kıtlığı tehdidinin artmasına neden oluyor.
-      Kuraklık riski yalnız içme sularını değil, hidro enerji üretimi ile tarım ve hayvancılıkta kullanılan su stoğunu da tehlikeye atıyor.
+        Türkiye Su Enstitüsü Politika Geliştirme Koordinatörü Dr. Tuğba Evrim Maden, iklim değişikliğinin su kaynaklarına çok boyutlu etkilerini ve neler yapılması gerektiğini AA Analiz için kaleme aldı.
+    </p>
+    <br>
+    <p class="paragraph">
+      İklim değişikliğinin etkilerinin çoğunlukla sıcaklık artışıyla ilişkilendirildiği görülse de en belirgin yansımaların su döngüsü üzerinden hissedildiği ortaya konmaktadır.
+      Yağışların düzensizleşmesi, uzun süreli kuraklıkların yaşanması, ani ve şiddetli sel olaylarının meydana gelmesi, yeraltı sularının giderek azalması ve su kalitesinde bozulmalar bu krizin doğrudan sonuçları arasında gösterilmektedir.
+      Bu nedenle, Birleşmiş Milletler (BM-Su-UN-Water) başta olmak üzere uluslararası kurumlar tarafından iklim değişikliği bir su krizi olarak tanımlanmaktadır.
     </p>
     <br>
     <h1>
-      Azalan Yağışlar ve Su Kaynaklarının Durumu
+      İklim değişikliğinin suya etkisi nedir?
     </h1>
-    <br>
+     <br>
     <p class="paragraph">
-      Meteoroloji Genel Müdürlüğü’nün (MGM) Şubat 2025’te yayımladığı alansal yağış raporuna göre, son yıllarda yağışlarda önemli bir düşüş yaşandı. 
-      Yağışlarda Türkiye genelinde normale göre %33;
-      İç Anadolunun batısı, Güneydoğu Anadolu ve Ege bölgelerinde ise %60’tan fazla azalma gözlemlendi. 
+      Hükümetlerarası İklim Değişikliği Paneli (IPCC) raporlarında, küçük sıcaklık artışlarının dahi su döngüsünde ciddi bozulmalara yol açabildiği belirtilmektedir.
+      Türkiye, Akdeniz iklim kuşağında yer aldığı için bu etkilerden doğrudan etkilenmektedir.
+      Akdeniz havzasının küresel ortalamadan yüzde 20 daha hızlı ısındığı, yağışlarda belirgin azalmaların görüldüğü ve kuraklıkların sıklaştığı ortaya konmuştur.
+      Türkiye'nin yıllık kişi başına düşen su miktarının yaklaşık bin 300 metreküp olduğu hesaplanmakta ve bu değer ülkemizi Falkenmark indeksine göre 'su stresi yaşayan ülkeler" kategorisine sokmaktadır.
+      Projeksiyonlara göre, yüzyılın sonuna kadar su potansiyelimizde yüzde 25'lik bir azalma yaşanabilecektir.
     </p>
     <br>
     <p class="paragraph">
-      Azalan yağışlar baraj stoklarını da olumsuz etkiliyor. Greenpeace’in raporuna göre, Türkiye’de 2023 sonu itibarıyla baraj doluluk oranları kritik seviyelere inmiş durumda. 
-      İstanbul, Ankara ve İzmir gibi büyük şehirlerde su rezervleri önceki yıllara göre önemli ölçüde azalırken Türkiye’nin yıllık kişi başına düşen su miktarı ise 1.300 metreküp seviyesine geriledi.
-      Çeşitli endeks verileri; kişi başına 1.700 metreküp su sıkıntısının olmadığını, 1.000-1.700 metreküp su stresini, 500-1.000 metreküp su kıtlığını ve 500 metreküp altının mutlak su kıtlığı olduğunu gösteriyor. 
-      Dolayısıyla Türkiye su stresi içindeki ülkeler arasında yer alıyor.
+      Birleşmiş Milletler Çölleşme ile Mücadele Sözleşmesi (UNCCD) tarafından hazırlanan Drought Hotspots raporunda Türkiye topraklarının yüzde 88'inin çölleşme riski altında olduğu belirtilmektedir.
+      Yüzyılın sonuna kadar yağışlarda yüzde 30'luk bir azalma, kıyı bölgelerinde sıcaklıklarda 4-5 derece, iç bölgelerde ise 5-6 derecelik artış beklenmektedir.
     </p>
     <br>
     <p class="paragraph">
-      Tarım ve Orman Bakanlığı’nın Kuraklık Yönetimi Raporu’na göre;
-      nüfus artışı ve su tüketimindeki plansız büyüme devam ederse, Türkiye 2030 yılı itibariyle kişi başına düşen su miktarının 1.000 metreküpün altına inerek 2070 yılına kadar su kıtlığı seviyesine gerilemesi muhtemel. 
-      Uzmanlar su yönetiminde acil önlemler alınmazsa, Türkiye’nin gelecekte daha ciddi su krizleriyle karşılaşabileceği konusunda uyarıyor.
+      2022'nin kurak geçmesinin ardından, 2023 yılında Karadeniz dışındaki tüm bölgeler kuraklık koşullarından etkilenmiştir.
+      En fazla zarar Ege, İç Anadolu, Güneydoğu Anadolu, Akdeniz ve Trakya bölgelerinde kaydedilmiştir.
+      Meteoroloji Genel Müdürlüğünün 2024-2025 su yılı verilerine göre Türkiye, 10 aylık dönemde uzun yıllar yağış ortalamasının yüzde 26 altında kalan ve 52 yılın en düşük seviyesine inen yağış değerleriyle ciddi bir meteorolojik kuraklık yaşamıştır.
+      Özellikle Güneydoğu Anadolu ve İç Anadolu bölgelerinde yağış oranındaki azalmalar yüzde 60'a yakın, Marmara ve Ege'de de 18 yıllık dönemin en düşük seviyelerine ulaşmıştır.
+    </p>
+    <br>
+    <p class="paragraph">
+      İklim değişikliğinin Türkiye'nin su arz-talep dengesi üzerinde ciddi etkiler yarattığı görülmektedir.
+      Arz tarafında, azalan yağışlar ve artan buharlaşma nedeniyle suyun doğal yenilenmesi kısıtlanmaktadır.
+      Yeraltı sularının tükenmesi ve göl ile barajlarda küçülme yaşanmaktadır. Talep tarafında, toplam su kullanımının yüzde 70'inin tarım tarafından gerçekleştirildiği rapor edilmiştir.
+      Geleneksel sulama yöntemleri, kurak dönemlerde talebin artmasına neden olmakta ve baskıyı daha da artırmaktadır.
+      Kentlerde kuraklığın etkileri "çok az su, çok fazla su, çok kirli su" şeklinde yansımakta, yetersiz kaynaklar, ani sel baskınları ve azalan kalite büyükşehirlerde su stresini artırmaktadır.
     </p>
     <br>
   </div>
