--- a/templates/page4.html
+++ b/templates/page4.html
@@ -106,6 +106,8 @@
     </form>
     <br>
     <a href="https://www.dogrulukpayi.com/bulten/turkiye-de-kuraklik-tehdidi-su-kaynaklari-alarm-veriyor?gad_source=1&gad_campaignid=1455793348&gclid=Cj0KCQiAiKzIBhCOARIsAKpKLANj_T78xB3kI-b5EYrPzj286Q3p3hZdXeyjxA_GCq0oNRiPv2UL_9saAj4xEALw_wcB" class="btn2">Kullanılan Kaynak (Haber 1)</a>
+    <br>
+    <a href="https://www.aa.com.tr/tr/analiz/iklim-degisikligi-golgesinde-su-krizi-turkiyede-kuraklik-riski-nasil-onlenebilir/3672464" class="btn2">Kullanılan Kaynak (Haber 2)</a>
   </div>
 
 </body>
