--- a/templates/index.html
+++ b/templates/index.html
@@ -298,6 +298,9 @@ textarea {
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" class="btn">Ankete Giriniz?</a>
     <br>
     <br>
+    <a href="https://read.bookcreator.com/Cd8I2Ld71dXWdMJdOR0s9BnWIG83/hacI0slcRN-NSnh5AYwrpA">Su Sözlüğü</a>
+    <br>
+    <br>
       <form action="/kaynakca" method="post">
         <button class="btn" type="submit">Kullanılan Kaynaklar</button>
       </form>
@@ -305,7 +308,7 @@ textarea {
 
   <div class="content-second">
     <h1>
-       Türkiye’de Kuraklık Tehdidi: Su Kaynakları Az Kalıyor.
+       Türkiye’de Kuraklık Tehdidi: Su Kaynakları Azalıyor.
     </h1>
     <br>
     <p class="paragraph">
