--- a/templates/index.html
+++ b/templates/index.html
@@ -256,7 +256,6 @@ textarea {
 
     .content-second form button {
     display: block;
-    margin: 0 auto;
     }
 
   </style>
@@ -298,7 +297,7 @@ textarea {
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" class="btn">Ankete Giriniz?</a>
     <br>
     <br>
-    <a href="https://read.bookcreator.com/Cd8I2Ld71dXWdMJdOR0s9BnWIG83/hacI0slcRN-NSnh5AYwrpA">Su Sözlüğü</a>
+    <a href="https://read.bookcreator.com/Cd8I2Ld71dXWdMJdOR0s9BnWIG83/hacI0slcRN-NSnh5AYwrpA" class="btn">Su Sözlüğü</a>
     <br>
     <br>
       <form action="/kaynakca" method="post">
