--- a/templates/index.html
+++ b/templates/index.html
@@ -67,10 +67,10 @@
     }
 
     .hero-background {
-      background-image: url('{{ url_for("static", filename="SuProje-Resim1.avif") }}');
+      background-image: url('{{ url_for("static", filename="res3.png") }}');
       background-repeat: repeat-x;
       background-size: auto 100%;
-      animation: scrollBackground 15s linear infinite;
+      animation: scrollBackground 60s linear infinite;
       height: 400px;
       display: flex;
       align-items: center;
